Cleaning up spacing and overflows to prevent white margins. Specifically, fixed the trip map.

--- a/static/clean-blog.css
+++ b/static/clean-blog.css
@@ -49,7 +49,7 @@ body {
 }
 p {
   line-height: 1.5;
-  margin: 30px 0;
+  margin: 10px 0;
 }
 p a {
   text-decoration: underline;
